fix spacing around tree node items

--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,11 @@ button {
     padding: 0.25em;
 }
 
+.tree-table .tree-node button {
+    padding:0;
+    margin:0;
+}
+
 .tree-table .tree-node span {
     grid-column: icon;
 }
